[project]
name = "rocketry-py"
version = "0.1.0"
description = ""
authors = [
    {name = "henceiusegentoo",email = "61363222+henceiusegentoo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "rocketry_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
